# AAUDOC

./: .gitignore  AAUDOC.cabal  README.md
example/: example.tex
example/documents/00-Documents/: 00-first_one.tex  01-file_two.tex  02-file_three.tex
example/documents/01-Bibliography/: 01-bibliography.tex  references.bib
src/: Datatypes.hs  File.hs  Jobs.hs  Macros.hs  Main.hs  Parsers.hs
