name:                AAUDOC
version:             0.3.5.2
synopsis:            Cross-platform implementation of the (in)famous compile-doc for collaborative LaTeX document compilation.
homepage:            https://github.com/skejserjensen/AAUDOC
license:             GPL-3
license-file:        LICENSE
author:              Søren Kejser Jensen, Christoffer Moesgaard
maintainer:          devel@kejserjensen.dk, cmoesgaard@gmail.com
category:            Utilities
build-type:          Simple
cabal-version:       >=1.8

executable aaudoc
  build-depends:       base, directory, filepath, process, time, deepseq
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  hs-source-dirs:      src

-- The line "library" is a hack to prevent the warning shown in the box below from cluttering the output
-- when building the package. The line was added as a last resort, as I where unable to find the tool
-- in the build process that accepts the flags suggested, nor any documentation about the flags them self
-- ---------------------------------------------------------------------------------------------------
--    Preprocessing executable 'aaudoc' for AAUDOC-0.3.5.1...
--    Warning: No documentation was generated as this package does not contain a
--    library. Perhaps you want to use the --executables, --tests or --benchmarks
--    flags.
-- ---------------------------------------------------------------------------------------------------
library
